configs/kube/nginx/nginx.yml
---
kind: Service
apiVersion: v1
metadata:
  name: nginx-svc
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      name: nginx
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-custom
  # annotations:
  #   nginx.ingress.kubernetes.io/backend-protocol:  "GRPC"
  #   kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  # - host: '*.apps.platform.localtest.me'  # これは通じない
  # - host: '*.*.apps.platform.localtest.me'  # Invalid value: "*.*.apps.platform.localtest.me": a wildcard DNS-1123 subdomain must start with '*.'
  - host: '*.default.apps.platform.localtest.me'
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-svc
            port:
              number: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  labels:
    app: nginx
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
      volumes:
        - name: nginx-config
          configMap:
            name: nginxconf
